--- a/module-3/01_Intro_HTML_CSS/exercise/Website/style.css
+++ b/module-3/01_Intro_HTML_CSS/exercise/Website/style.css
@@ -34,8 +34,24 @@ img {
 
 table, th, td {
     border: 5px outset gold;
+    align-content: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 th {
     text-decoration: underline;
+}
+
+h3 {
+    font-size: 3em;
+}
+
+h4 {
+    font-size: 3em;
+
+}
+
+p {
+    font-style: italic;
 }
