--- a/module-3/01_Intro_HTML_CSS/exercise/Website/style.css
+++ b/module-3/01_Intro_HTML_CSS/exercise/Website/style.css
@@ -1,3 +1,7 @@
+body {
+    background-color: lightblue;
+}
+
 h1 {
     color: white;
     text-align: center;
@@ -37,6 +41,7 @@ table, th, td {
     align-content: center;
     margin-left: auto;
     margin-right: auto;
+    background-color:red;
 }
 
 th {
