--- a/module-3/03_CSS_Grid/exercise/style.css
+++ b/module-3/03_CSS_Grid/exercise/style.css
@@ -4,12 +4,10 @@
 }
 
 html {
-
-    font-size: 16px;
+font-size: 16px;
 }
 
 body {
-    display:grid;
     margin-left: 7%;
     margin-right: 7%;
     background-color: rgba(192, 192, 192, 0.1);
@@ -52,12 +50,103 @@ header img {
 #student-picture img{
     border-radius: 50%;
 }
-
-#main-grid {
+#main-grid{
     display: grid;
-
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas:
+    "headline headline picture"
+    "quote quote picture"
+    "profile profile contact"
+    "experience experience experience";
+    row-gap: 20px;
+    column-gap: 50px;
+    text-align: center;
+    align-items: center;
 }
-
-#experience-grid {
-    display:grid
+#headline {
+    grid-area: headline;
 }
+#student-picture{
+    grid-area: picture;
+}
+#student-quote{
+    grid-area: quote;
+}
+#student-profile{
+    grid-area: profile;
+}
+#student-contact{
+    grid-area: contact;
+}
+#experience-grid{
+ grid-area: experience;
+ display:grid;
+ grid-template-columns: 1fr 1fr;
+ row-gap: 20px;
+ column-gap: 50px;
+ grid-template-areas:
+ "code code"
+ "database database"
+ "web design";
+}
+#experience-code{
+    grid-area: code;
+}
+#experience-database{
+    grid-area: database;
+}
+#experience-web{
+    grid-area: web;
+}
+#experience-design{
+    grid-area: design;
+}
+@media only screen and (max-width: 1024px) {
+    #main-grid {
+        display:grid;
+        row-gap: 20px;
+        column-gap: 35px;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:
+        "headline headline"
+        "quote picture"
+        "quote contact"
+        "profile profile"
+        "experience experience"
+        }
+    #experience-grid {
+        display:grid;
+        row-gap: 20px;
+        column-gap: 20px;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:
+        "code web"
+        "database design"
+        }
+    }
+@media only screen and (max-width: 450px) {
+    #main-grid {
+        display:grid;
+        row-gap: 20px;
+        column-gap: 35px;
+        grid-template-columns: 1fr;
+        grid-template-areas:
+        "headline"
+        "picture"
+        "contact"
+        "quote"
+        "profile"
+        "experience"
+        }
+ #experience-grid {
+            display:grid;
+            row-gap: 20px;
+            column-gap: 20px;
+            grid-template-columns: 1fr 1fr;
+            grid-template-areas:
+            "code"
+            "web"
+            "database"
+            "design"
+            }
+        }
