--- a/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-1-headers/step-1/style.css
+++ b/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-1-headers/step-1/style.css
@@ -25,6 +25,7 @@ li {
   color: #707070;
   padding: 0 20px 0 0;
   margin-left: 20px;
+  
 }
 
 a,
@@ -36,4 +37,8 @@ a:visited {
 a:hover {
   color: #00AFEF;
   text-decoration: underline;
+}
+
+header>nav>ul {
+  display:flex;
 }
