--- a/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-1-headers/step-5/style.css
+++ b/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-1-headers/step-5/style.css
@@ -41,3 +41,15 @@ a:hover {
 .my-account img {
   width: 40px;
 }
+
+header>nav>ul {
+  display:flex;
+}
+
+header {
+  display: flex;
+}
+
+header>div.spacer {
+  flex-grow: 1;
+}
