--- a/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-3-align-vertically/step-4/style.css
+++ b/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-3-align-vertically/step-4/style.css
@@ -16,3 +16,8 @@ body {
   border: solid 1px #777;
 }
 
+div.container {
+  display:flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
