--- a/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-4-flex-grow/step-1/style.css
+++ b/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-4-flex-grow/step-1/style.css
@@ -20,3 +20,11 @@ body {
 .box:nth-child(even) {
   background-color: #005270;
 }
+
+div.container {
+  display:flex
+}
+
+div.box {
+  flex-grow: 1;
+}
