--- a/module-3/04_CSS_Flexbox/exercise/exercise-part-2/css/style.css
+++ b/module-3/04_CSS_Flexbox/exercise/exercise-part-2/css/style.css
@@ -1,4 +1,5 @@
 body {
+  display:flex;
   margin: 0;
   padding: 0;
   min-height: 100vh;
@@ -10,8 +11,30 @@ body {
   background-color: #F7F7F7;
 }
 
+section#left-panel {
+  display:flex;
+  flex-direction:column;
+  width: 35%;
+}
+
+
+section#left-panel > nav {
+  flex-grow: 1;
+}
+
+section#right-panel {
+  display: flex;
+  justify-content:center;
+  align-items:center;
+  flex-grow: 1;
+}
+
+
+
 ul.social-icons {
   list-style-type: none;
+  display:flex;
+  justify-content:space-between;
   margin: 20px 20px;
   padding: 0;
 }
